# NIITHIPEAK

./: .gitignore  CF-AN-equities-24-01-2026-to-25-01-2026.csv  main.py  pyproject.toml
.github/workflows/: python-app.yml
database/: _unprocessed.csv  amalgamation_unprocessed.csv  cash_flow_unprocessed.csv  change_in_management_unprocessed.csv  credit_rating_unprocessed.csv  esg_rating_unprocessed.csv  esops_unprocessed.csv  financial_results_unprocessed.csv  insolvency_unprocessed.csv  investor_presentation_unprocessed.csv  law_court_govt_unprocessed.csv  manufacturing_plat_inspection_unprocessed.csv  meeting_update_unprocessed.csv  news_papers_unprocessed.csv  order_update_mou_unprocessed.csv  outcome_of_boardmeeting_unprocessed.csv  postal_ballot_notices_unprocessed.csv  re_lodgement_unprocessed.csv  subsidary_ncbs_unprocessed.csv  test_unprocessed.csv  transcripts_unprocessed.csv
file_downloader_segmentor/: get_image.py  main.ipynb  main.py  requirements.txt  s0_saving_files_to_folder.py  segmentor.py
financial_results/: column_indices.py  financial_changes.csv  get_pdf_from_csv.py  load_to_csv.py  main.ipynb  main.py  md_to_pandas.ipynb  page_finder.py  pdf_to_image.py  requirements.txt  row_indices.py  table_extractor.py  testing_data_extraction.ipynb  using_llama.py  using_unstructured.py
financial_results/saved_md_files/: 108_VAKRANGEE_24012026153753_OutcomeBM240126_8.md  122_BORANA_24012026151209_SE_Press_Release_2.md  129_SBFC_24012026144009_Outcomefinal_4.md  (+12 more)
keywords/: keywords.py
test/: test.csv  test_operation.py
