[project]
name = "niithipeak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-parse>=0.6.91",
    "pandas>=3.0.0",
    #"pdf2image>=1.17.0",
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "unstructured[all-docs]>=0.18.27",
]
